--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.gitconfig
 
 # Created by https://www.gitignore.io/api/vue,git,node,rust,sass,macos,vuejs,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=vue,git,node,rust,sass,macos,vuejs,windows,visualstudiocode
