--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "iterm2-macos-dynamic-profile"]
 	path = iterm2-macos-dynamic-profile
 	url = https://github.com/GabLeRoux/iterm2-macos-dynamic-profile.git
-[submodule "dracula.itermcolors"]
+[submodule "iterm"]
 	path = dracula.itermcolors
 	url = https://github.com/dracula/iterm.git
+[submodule "oh-my-zsh"]
+	path = oh-my-zsh
+	url = https://github.com/robbyrussell/oh-my-zsh.git
