To be honest, I do not quite remember everything I changed here today. But it is all good, I tell ya.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
+.untracked
+
+# Node Chakra Time Travel
 _ttd_log_
 
 # Don't expose personal info often stored in .gitconfigs
 .gitconfig
-
 
 ## gitignore.io
 # Created by https://www.gitignore.io/api/git,node,sass,rust,vuejs,macos,windows,visualstudiocode
